--- a/index.html
+++ b/index.html
@@ -1,11 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="logo" href="./images/tree-logo.svg">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+        rel="stylesheet">
     <title>Home</title>
 </head>
+
 <body>
-    
+    <header>
+        <a href="index.html" class="logo-link">
+            <img src="./images/tree-logo.svg" alt="logo" class="logo-img">
+        </a>
+        <nav class="header-nav">
+            <ul class="header-ul">
+                <a href="./index.html">
+                    <li class="header-li m-riht-shadow">Home</li>
+                </a>
+                <a href="#">
+                    <li class="header-li m-right">Post</li>
+                </a>
+                <a href="#">
+                    <li class="header-li">Newsletter</li>
+                </a>
+            </ul>
+        </nav>
+    </header>
 </body>
+
 </html>
