--- a/index.html
+++ b/index.html
@@ -33,6 +33,20 @@
             </ul>
         </nav>
     </header>
+    <section>
+        <img src="./images/main-cover.png" alt="image" class="main-img">
+        <article class="section-article">
+            <h2 class="section-title">Bersama Lindungi Bumi</h2>
+            <p class="section-p">Kami bermimpi untuk menanam lebih dari 10 juta pohon dan menciptakan dunia yang lebih indah dan asri
+                untuk kita, dia, dan semua. Kami bermimpi untuk menanam lebih dari 10 juta pohon dan menciptakan dunia
+                yang lebih indah dan asri untuk kita, dia, dan semua. Kami bermimpi untuk menanam lebih dari 10 juta
+                pohon dan menciptakan dunia yang lebih indah dan asri untuk kita, dia, dan semua. Kami bermimpi untuk
+                menanam lebih dari 10 juta pohon dan menciptakan dunia yang lebih indah dan asri untuk kita, dia, dan
+                semua. Kami bermimpi untuk menanam lebih dari 10 juta pohon dan menciptakan dunia yang lebih indah dan
+                asri untuk kita.</p>
+            <button class="section-button">Read More</button>
+        </article>
+    </section>
 </body>
 
 </html>
