--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="logo" href="./images/tree-logo.svg">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap"
-        rel="stylesheet">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+    </style>
     <title>Home</title>
 </head>
 
 <body>
+    <!----------- header ----------->
     <header>
         <a href="index.html" class="logo-link">
             <img src="./images/tree-logo.svg" alt="logo" class="logo-img">
@@ -33,11 +33,13 @@
             </ul>
         </nav>
     </header>
+    <!----------- section ----------->
     <section>
         <img src="./images/main-cover.png" alt="image" class="main-img">
         <article class="section-article">
             <h2 class="section-title">Bersama Lindungi Bumi</h2>
-            <p class="section-p">Kami bermimpi untuk menanam lebih dari 10 juta pohon dan menciptakan dunia yang lebih indah dan asri
+            <p class="section-p">Kami bermimpi untuk menanam lebih dari 10 juta pohon dan menciptakan dunia yang lebih
+                indah dan asri
                 untuk kita, dia, dan semua. Kami bermimpi untuk menanam lebih dari 10 juta pohon dan menciptakan dunia
                 yang lebih indah dan asri untuk kita, dia, dan semua. Kami bermimpi untuk menanam lebih dari 10 juta
                 pohon dan menciptakan dunia yang lebih indah dan asri untuk kita, dia, dan semua. Kami bermimpi untuk
@@ -47,6 +49,31 @@
             <button class="section-button">Read More</button>
         </article>
     </section>
+    <!----------- footer ----------->
+    <footer>
+        <h2 class="footer-title">Follow us</h2>
+        <ul class="footer-ul">
+            <a href="https://www.tiktok.com/explore" class="footer-img-link" target="_blank">
+                <li class="footer-li">
+                    <img src="./images/tik-tok.svg" alt="tik-tok" class="footer-img">
+                </li>
+            </a>
+            <a href="https://www.instagram.com/" class="footer-img-link" target="_blank">
+                <li class="footer-li margin-img">
+                    <img src="./images/instagram.svg" alt="instagram" class="footer-img">
+                </li>
+            </a>
+            <a href="https://x.com/" class="footer-img-link" target="_blank">
+                <li class="footer-li margin-img">
+                    <img src="./images/X.svg" alt="X" class="footer-img">
+                </li>
+            </a>
+            <a href="https://www.pinterest.com/" class="footer-img-link" target="_blank">
+                <li class="footer-li margin-img">
+                    <img src="./images/pinterest.svg" alt="pinterest" class="footer-img">
+                </li>
+        </ul>
+    </footer>
 </body>
 
 </html>
